--- a/client/components/legend/legend.less
+++ b/client/components/legend/legend.less
@@ -32,7 +32,7 @@
         height: inherit;
         overflow: auto;
 
-        .item, .type {
+        .item {
             font-weight: normal;
 
             &:active, &:focus, &:hover {
@@ -42,6 +42,12 @@
             &.filtered {
                 font-weight: bold;
             }
+        }
+
+        .customized {
+            margin-bottom: 5px;
+            margin-left: 20px;
+            margin-right: 20px;
         }
     }
 }
