--- a/client/components/legend/legendHeaders.html
+++ b/client/components/legend/legendHeaders.html
@@ -1,1 +1,1 @@
-<filter-notification get-data="getFilterData" get-text="getFilterText" remove="addOrRemoveFilter" visualization-id="visualizationId"></filter-notification>
+<filter-notification get-data="getFilterData" get-desc="getFilterDesc" get-text="getFilterText" remove="toggleFilterAndAddOrRemove" visualization-id="visualizationId"></filter-notification>
