--- a/client/components/textCloud/textCloudOptions.html
+++ b/client/components/textCloud/textCloudOptions.html
@@ -1,7 +1,19 @@
 <div class="form-group" ng-hide="bindings.hideAdvancedOptions">
-    <label>Data Field</label>
+    <label>Text Field</label>
     <select class="form-control" ng-model="active.dataField" ng-options="field.prettyName for field in active.fields" ng-required="true" ng-disabled="(active.fields.length == 0)" ng-change="handleChangeDataField()">
     </select>
+</div>
+
+<div class="form-group">
+    <label>Text Limit</label>
+    <div class="input-group">
+        <input type="number" min="1" class="form-control" ng-model="active.limit" required>
+        <div class="input-group-btn">
+            <button type="button" class="btn btn-default refresh" title="Refresh" ng-click="handleChangeLimit()">
+                <span class="glyphicon glyphicon-refresh"></span>
+            </button>
+        </div>
+    </div>
 </div>
 
 <div class="form-group">
