--- a/client/components/legend/legend.less
+++ b/client/components/legend/legend.less
@@ -24,30 +24,36 @@
         padding: 0px;
     }
 
-    .padded-list {
-        padding-left: 20px;
-    }
-
     .legend-display {
         height: inherit;
         overflow: auto;
 
         .item {
-            font-weight: normal;
+            display: table;
+            margin-bottom: 5px;
 
-            &:active, &:focus, &:hover {
-                cursor: pointer;
+            .cell {
+                color: @main-text-color;
+                display: table-cell;
+                padding: 0px 5px;
             }
 
-            &.filtered {
+            .filtered {
                 font-weight: bold;
+            }
+
+            .glyphicon {
+                &:active, &:focus, &:hover {
+                    cursor: pointer;
+                    color: @accent-bright;
+                }
             }
         }
 
         .customized {
             margin-bottom: 5px;
-            margin-left: 20px;
-            margin-right: 20px;
+            margin-left: 10px;
+            margin-right: 10px;
         }
     }
 }
