--- a/client/components/customFilterList/customFilterList.less
+++ b/client/components/customFilterList/customFilterList.less
@@ -13,7 +13,7 @@
 // limitations under the License.
 //
 
-.legendDirective {
+.customFilterListDirective {
     label {
         color: @main-text-color;
     }
@@ -24,7 +24,7 @@
         padding: 0px;
     }
 
-    .legend-display {
+    .custom-filter-list {
         height: inherit;
         overflow: auto;
 
