Minor change to defining custom filters in the dashboard configuration.  A few updates to the custom filter list based on the feedback from its code review.

--- a/client/components/customFilterList/customFilterList.less
+++ b/client/components/customFilterList/customFilterList.less
@@ -50,7 +50,7 @@
             }
         }
 
-        .customized {
+        .custom {
             margin-bottom: 5px;
             margin-left: 10px;
             margin-right: 10px;
