--- a/client/components/newsFeed/newsFeedDisplay.html
+++ b/client/components/newsFeed/newsFeedDisplay.html
@@ -3,6 +3,7 @@
         <div>
             <span ng-if="active.feedType == active.TWITTER" class="icon-Twitter_32x32 neon-sprite" title="Tweet"></span>
             <span ng-show="active.showTranslations && item.isTranslated" class="icon-Translated_20x20 neon-sprite" title="Showing Translation"></span>
+            <span ng-show="active.showTranslations && item.translationFailed" class="icon-Translation_Failed_20x20 neon-sprite" title="Translation Failed"></span>
             <span ng-class="{true: 'vertical-align', false: ''}[active.feedType == active.TWITTER]">
                 <span class="primary-title" ng-if="item.primaryTitle != undefined" ng-hide="active.showTranslations" ng-bind="item.primaryTitle"></span>
                 <span class="primary-title" ng-if="item.primaryTitleTranslated != undefined" ng-show="active.showTranslations" ng-bind="item.primaryTitleTranslated" title="{{item.primaryTitle}}"></span>
