Removing some malformed bootstrap code from the filterbuilder and timeline templates.  These were causing exceptions in bootstrap code on firefox.

--- a/client/components/timeline/timelineHeaders.html
+++ b/client/components/timeline/timelineHeaders.html
@@ -1,5 +1,5 @@
 <div class="neon-datetimepicker dropdown pull-left">
-    <div class="dropdown-toggle" role="button" data-toggle="dropdown" data-target="#" href="#" title="{{'From ' + (active.startDateForDisplay || '?') + ' to ' + (active.endDateForDisplay || '?') + ' (Click to Change)'}}">
+    <div class="dropdown-toggle" role="button" data-toggle="dropdown" title="{{'From ' + (active.startDateForDisplay || '?') + ' to ' + (active.endDateForDisplay || '?') + ' (Click to Change)'}}">
         <span class="glyphicon glyphicon-calendar"></span>
         <span ng-bind="(active.startDateForDisplay || '?') + ' - ' + (active.endDateForDisplay || '?')"></span>
     </div>
