--- a/client/components/filterBuilder/filterBuilder.html
+++ b/client/components/filterBuilder/filterBuilder.html
@@ -56,7 +56,7 @@
       <div class="form-group">
         <input type="text" class="form-control" placeholder="Value" ng-keyup="$event.keyCode == 13 && updateFilterRow(filterRow.database.name, filterRow.table.name, filterRow.index)" ng-model="filterRow.value" ng-change="dirtyFilterRow(filterRow)" ng-show="!(filterRow.isDate)">
         <div class="neon-datetimepicker dropdown" ng-show="(filterRow.isDate)">
-            <button class="btn btn-default dropdown-toggle" id="date-dropdown-{{$index}}" role="button" data-toggle="dropdown" data-target="#" href="#" title="{{filterRow.value ? filterRow.value.toUTCString() : 'Choose Date'}}">
+            <button class="btn btn-default dropdown-toggle" id="date-dropdown-{{$index}}" role="button" data-toggle="dropdown" title="{{filterRow.value ? filterRow.value.toUTCString() : 'Choose Date'}}">
                 <span class="glyphicon glyphicon-calendar"></span>
                 <span ng-bind="(filterRow.value ? filterRow.value.toUTCString() : 'Choose Date')"></span>
             </button>
@@ -98,12 +98,12 @@
       <div class="form-group">
         <input type="text" class="form-control" id="filter-value" size="42" placeholder="Value" ng-keyup="$event.keyCode == 13 && addFilterRow()" ng-model="selectedValue" ng-disabled="(fields.length == 0)" ng-required="true" ng-show="!(selectedFieldIsDate)" ng-change="handleChangeSelectedValue()">
         <div class="neon-datetimepicker dropdown" ng-show="(selectedFieldIsDate)">
-            <button class="btn btn-default dropdown-toggle" id="date-dropdown" role="button" data-toggle="dropdown" data-target="#" href="#" title="{{selectedValue ? selectedValue.toUTCString() : 'Choose Date'}}">
+            <button class="btn btn-default dropdown-toggle" id="date-dropdown" role="button" data-toggle="dropdown" title="{{selectedValue ? selectedValue.toUTCString() : 'Choose Date'}}">
                 <span class="glyphicon glyphicon-calendar"></span>
                 <span ng-bind="(selectedValue ? selectedValue.toUTCString() : 'Choose Date')"></span>
             </button>
             <ul class="dropdown-menu" role="menu">
-                <datetimepicker data-ng-model="selectedValue" data-on-set-time="handleChangeSelectedValue()" data-datetimepicker-config="{ dropdownSelector: '#date-dropdown', startView: 'year', minView: 'hour' }"/>
+                <!-- <datetimepicker data-ng-model="selectedValue" data-on-set-time="handleChangeSelectedValue()" data-datetimepicker-config="{ dropdownSelector: '#date-dropdown', startView: 'year', minView: 'hour' }"/> -->
             </ul>
         </div>
       </div>
