Dropping in a new version of plotly and rigging up the scattergl plot.

--- a/client/components/scatterPlot/scatterPlotDisplay.html
+++ b/client/components/scatterPlot/scatterPlotDisplay.html
@@ -1,1 +1,3 @@
-<div class="graph-div" style="width: 100%;"></div>
+<div class="graph-div" style="width: 100%;">
+	<div class="gl-container"></div>
+</div>
