--- a/client/components/scatterPlot/scatterPlotOptions.html
+++ b/client/components/scatterPlot/scatterPlotOptions.html
@@ -20,6 +20,7 @@
     <label>Type</label>
     <select class="form-control" ng-model="active.type" ng-required="true" ng-change="handleChangeType()">
         <option value="scatter">Scatter Plot</option>
+        <option value="scattergl">Scatter GL</option>
         <option value="heatmapScatter">Heatmap Scatter Plot</option>
         <option value="histogramScatter">Histogram Scatter Plot</option>
     </select>
