Debouncing the resize method to avoid costly redraws and modifying the trace plotting to avoid reconstructing the entire plotly graph whenever an option is changed.

--- a/client/components/scatterPlot/scatterPlotDisplay.html
+++ b/client/components/scatterPlot/scatterPlotDisplay.html
@@ -1,3 +1,1 @@
-<div class="graph-div" style="width: 100%;">
-	<div class="gl-container"></div>
-</div>
+<div class="graph-div" style="width: 100%"></div>
