--- a/client/components/scatterPlot/scatterPlotHeaders.html
+++ b/client/components/scatterPlot/scatterPlotHeaders.html
@@ -1,1 +1,2 @@
-<!-- No Headers -->
+<filter-notification get-data="getFilterData" get-desc="createFilterDesc" get-links-popup-key="getLinksPopupKey" remove="removeFilter"
+    show-links-popup-button="showLinksPopupButton" visualization-id="visualizationId"></filter-notification>
