--- a/client/components/lineChart/lineChartOptions.html
+++ b/client/components/lineChart/lineChartOptions.html
@@ -23,3 +23,16 @@
     </div>
     <div class="clearfix"></div>
 </div>
+
+<div class="form-group">
+    <label>Y-Axis Scale</label>
+    <div class="btn-group">
+      <label class="btn btn-default" ng-class="{true: 'active', false: ''}[active.yAxisScale === 'linear']">
+        <input type="radio" style="display:none" ng-model="active.yAxisScale" value="linear" ng-change="changeYAxisScale()">Linear
+      </label>
+      <label class="btn btn-default" ng-class="{true: 'active', false: ''}[active.yAxisScale === 'logarithmic']">
+        <input type="radio" style="display:none" ng-model="active.yAxisScale" value="logarithmic" ng-change="changeYAxisScale()">Logarithmic
+      </label>
+    </div>
+    <div class="clearfix"></div>
+</div>
